--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 amigos.</h2>
             <textarea name="" class="textarea-encriptar" cols="58" rows="6"
                 placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje."
-                style="text-transform:lowercase;"></textarea>
+                style="text-transform:uppercase;"></textarea>
 
             <h3 class="instrucciones">Solo podrás ingresar letras minúsculas sin acento ni caracteres especiales.</h3>
             <div class="botones-encriptador">
