--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Encriptador de Texto Alura One</title>
 </head>
 
@@ -23,7 +23,7 @@
                 amigos.</h2>
             <textarea name="" class="textarea-encriptar" cols="58" rows="6"
                 placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje."
-                style="text-transform:uppercase;"></textarea>
+                style="text-transform:lowercase;"></textarea>
 
             <h3 class="instrucciones">Solo podrás ingresar letras minúsculas sin acento ni caracteres especiales.</h3>
             <div class="botones-encriptador">
