--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             <h2 class="descripcion">Con el programa de encriptación de Alura One podrás crear mensajes secretos para
                 enviarlos a tus
                 amigos.</h2>
-            <textarea name="" class="textarea-encriptar" cols="58" rows="6"
-                placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje."
-                style="text-transform:lowercase;"></textarea>
-
+            <input class="input-encriptar"
+                placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje.">
             <h3 class="instrucciones">Solo podrás ingresar letras minúsculas sin acento ni caracteres especiales.</h3>
             <div class="botones-encriptador">
                 <button class="btn-Encriptar">ENCRIPTAR</button>
@@ -34,10 +32,9 @@
 
         <section>
             <h2 class="subtitulo">MENSAJE ENCRIPTADO</h2>
-                <textarea name="" class="text-area-mensaje" cols="58" rows="6"
-                    placeholder="Ningún mensaje fue encontrado."></textarea>
+            <input class="input-mensaje" placeholder="Ningún mensaje fue encontrado."></input>
             <div class="botonCopiar">
-                <button class="btnCopiar">COPIAR MENSAJE</button>
+                <button type="submit" class="btnCopiar">COPIAR MENSAJE</button>
 
             </div>
         </section>
@@ -46,6 +43,8 @@
     <footer>
         <p>ORACLE + ALURA LATAM - ALURA CHALLENGES &copy COPYRIGHT SANTISTUDIO</p>
     </footer>
+
+    <script src="js/encriptar.js"></script>
 </body>
 
 </html>
