Retoques en css, cambios de clases en html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h2 class="descripcion">Con el programa de encriptación de Alura One podrás crear mensajes secretos para
                 enviarlos a tus
                 amigos.</h2>
-            <input class="input-encriptar"
-                placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje.">
+            <textarea class="caja-encriptar"
+                placeholder="Ingresa tu texto aquí, para encriptar o desencriptar un mensaje."></textarea>
             <h3 class="instrucciones">Solo podrás ingresar letras minúsculas sin acento ni caracteres especiales.</h3>
             <div class="botones-encriptador">
                 <button class="btn-Encriptar">ENCRIPTAR</button>
@@ -32,7 +32,7 @@
 
         <section>
             <h2 class="subtitulo">MENSAJE ENCRIPTADO</h2>
-            <input class="input-mensaje" placeholder="Ningún mensaje fue encontrado."></input>
+            <textarea class="caja-mensaje" placeholder="Ningún mensaje fue encontrado."></textarea>
             <div class="botonCopiar">
                 <button type="submit" class="btnCopiar">COPIAR MENSAJE</button>
 
